addons/kyverno/policies/betting-player_funds_segregation-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: betting-player_funds_segregation
  annotations:
    rulehub.id: betting.player_funds_segregation
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: betting.player_funds_segregation: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
